Implement TES3 BSA archive walking slice (#37)